--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-router-dom": "5.1",
     "react-scripts": "^4.0.3",
+    "react-select": "^5.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -37,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-error-overlay": "^6.0.9"
   }
 }
