--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.28.0",
     "firebase": "8.5",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-router-dom": "5.1",
     "react-scripts": "^4.0.3",
     "react-select": "^5.4.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
